styles/contact.less
@import "main.less";

html, body{
    background: @theme-color-light;
}

.title{
    font-size: 5em;
    margin: 0;
}

.card-img-top{
    text-align: center;
    margin-top: 10%;
    i{
        font-size: 10em;
        width: 100%;
        display: inline-block;
        
    }
}

@media screen and (min-height: 730px){
    section{
        height: 100%;
    }

    footer{
        margin-top: -135px;
    }
}


@media screen and (max-width: 991px){
    footer{
        position: relative;
        bottom: 0;
    }
}

